--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ footer a:hover { text-decoration:underline; }
     <div class="project">
       <h3>MedEase – Mental Health Platform</h3>
       <p>Developed a full-featured mental health and well-being platform with a clean UI. Features include self-assessment, meditation sessions, relaxation tools, therapist profiles, and notifications.</p>
-      <a href="https://github.com/placeholder-link" target="_blank">GitHub Link</a>
+      <a href="https://github.com/naveenkumar-2412/MedEASE" target="_blank">GitHub Link</a>
     </div>
 
     <div class="project">
@@ -184,3 +184,4 @@ footer a:hover { text-decoration:underline; }
 
 </body>
 </html>
+
