--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ footer a:hover { text-decoration:underline; }
     <div class="project">
       <h3>AI-Powered ARGO Explorer</h3>
       <p>Interactive platform for exploring the Indian Ocean using AI-driven search and metadata. Developed unique visualizations and personalized search tools.</p>
-      <a href="https://github.com/placeholder-link" target="_blank">GitHub Link</a>
+      <a href="https://github.com/naveenkumar-2412/ARGO" target="_blank">GitHub Link</a>
     </div>
 
     <div class="project">
@@ -184,4 +184,5 @@ footer a:hover { text-decoration:underline; }
 
 </body>
 </html>
+
 
