--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ footer a:hover { text-decoration:underline; }
 <header>
   <div class="container">
     <h1>Naveenkumar R.</h1>
-    <p>3rd-year AI & DS Student | Aspiring AI/ML Engineer | Exploring Agentic Frameworks</p>
+    <p>3rd-year AI & DS Student | Aspiring AI/ML Engineer | Vision & LLM Model Developer | Exploring Agentic Frameworks</p>
   </div>
 </header>
 
@@ -184,5 +184,6 @@ footer a:hover { text-decoration:underline; }
 
 </body>
 </html>
+
 
 
